--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "projeto17-shortly",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app.js",
+  "type": "module",
   "scripts": {
+    "dev": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
